--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.4
   image_picker: ^0.8.5+3
+  dio: ^4.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
